# GKL

src/main/native/common/: 2222  3333  4444  avx.h  sse2neon_ext.h
src/main/native/compression/isa-l-master/igzip/: 2222  3333  4444  encode_df.c  huff_codes.c  huff_codes.h  huffman.h  sse2neon.h  sse2neon_ext.h
src/main/native/compression/libz/: CMakeLists.txt
src/main/native/compression/otc_zlib/: deflate.c  inflate.c
src/main/native/pairhmm/: CMakeLists.txt  IntelPairHmm.cc  avx-types.h  pairhmm_common.h
src/main/native/smithwaterman/: CMakeLists.txt  IntelSmithWaterman.cc  avx2-functions.h  smithwaterman_common.h
src/main/native/utils/: utils.cc
